--- a/regressionmpgCPU/pom.xml
+++ b/regressionmpgCPU/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.neuraljava.samples</groupId>
-  <artifactId>classificationIris</artifactId>
+  <artifactId>regressionmpgcpu</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>classificationIris</name>
+  <name>regressionmpg</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -32,7 +32,13 @@
 	    <groupId>org.deeplearning4j</groupId>      
 	    <artifactId>deeplearning4j-modelimport</artifactId>      
 	    <version>1.0.0-beta4</version>    
-	  </dependency>                       
+	  </dependency>  
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-native</artifactId>
+            <version>1.0.0-beta4</version>
+        </dependency>
+<!--                     
 	<dependency>
 		<groupId>org.nd4j</groupId>
 		<artifactId>nd4j-cuda-10.1</artifactId>
@@ -43,6 +49,7 @@
 		<artifactId>deeplearning4j-cuda-10.0</artifactId>
 		<version>1.0.0-beta4</version>
 	</dependency>	
+-->
     <dependency>
         <groupId>org.deeplearning4j</groupId>
         <artifactId>deeplearning4j-ui_2.10</artifactId>
@@ -61,7 +68,7 @@
   				</descriptorRefs>
   				<archive>
   					<manifest>
-  						<mainClass>com.neuraljava.samples.classificationIris.ClassificationIris</mainClass>
+  						<mainClass>com.neuraljava.samples.regressionmpgcpu.RegressionMPG</mainClass>
   					</manifest>
   				</archive>
   			</configuration>
